--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,8 +11,11 @@
           <a class="nav-link" routerLink="/LISTADO" routerLinkActive="active"><i class="fas fa-gamepad"></i> LISTADO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/LISTADO/add" routerLinkActive="active"><i class="fas fa-plus-circle"></i>FORMULARIO
+          <a class="nav-link" routerLink="/LISTADO/add" routerLinkActive="active"><i class="fas fa-plus-circle"></i>DETECTOR MUTANTE
             GAME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/LISTADO/grafico" routerLinkActive="active"><i class="fas fa-plus-circle"></i>GRAFICO</a>
         </li>
       </ul>
     </div>
