--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,42 +1,34 @@
-<body>
-<div class="row">	
-        	<div class="col-sm-12">
-                    <h4 align="center">COMPROBACION MUTANTE</h4><hr>
-                    <h4 align="center">INGRESE SOLO COMBINACIONES CON "A , C, G, T"</h4><hr />
-<form action="/mutante " method="post" id="form">
-  <ul>
-    <li>
-      <label for="adn1">adn 1:</label>
-      <input type="text" id="adn1" name="adn1" />
-    </li>
-    <li>
-      <label for="adn2">adn 2:</label>
-      <input type="text" id="adn2" name="adn2" />
-    </li>
-    <li>
-      <label for="adn3">adn 3:</label>
-      <input type="text" id="adn3" name="adn3" />
-    </li>
-    <li>
-      <label for="adn4">adn 4:</label>
-      <input type="text" id="adn4" name="adn4" />
-    </li>
-    <li>
-      <label for="adn5">adn 5:</label>
-      <input type="text" id="adn5" name="adn5" />
-    </li>
-    <li>
-      <label for="adn6">adn 6:</label>
-      <input type="text" id="adn6" name="adn6" />
-    </li>
-    
-    <li class="button">
-      <button type="submit">ENVIAR PARA COMPROBAR</button>
-    </li>
-  </ul>
-</form>
+<div style="text-align:center">
+    <h1>
+       COMPROBADOR DE MUTANTE
+    </h1>
+    <img width="100" src="https://unprogramador.com/wp-content/uploads/2017/10/cropped-iconprogramador2.png">
 </div>
+<section>
 
 
-	</div>
-</body>
+    <div class="mitad">
+        <div class="peticiones">
+            <h2>COMPROBADOR INGRESE 6 LETRAS ENTRE ACTG EN 6 GRUPOS SEPARADOS POR COMA </h2>
+            <form>
+                <input type="text" placeholder="DNA" />
+                <button>ENVIAR</button>
+            </form>
+
+        </div>
+        <div class="peticiones">
+            <h2>GRABAR </h2>
+            <form>
+                <input type="text" placeholder="Titulo" />
+                <input type="text" placeholder="Autor" />
+                <button>Post</button>
+            </form>
+
+        </div>
+        
+    </div>
+    <div class="mitad result">
+
+    </div>
+
+</section>
