--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -2,14 +2,14 @@
     <h1>
        COMPROBADOR DE MUTANTE
     </h1>
-    <img width="100" src="https://unprogramador.com/wp-content/uploads/2017/10/cropped-iconprogramador2.png">
+    <img width="200" src="https://unprogramador.com/wp-content/uploads/2017/10/cropped-iconprogramador2.png">
 </div>
-<section>
+
 
 
     <div class="mitad">
         <div class="peticiones">
-            <h2>COMPROBADOR INGRESE 6 LETRAS ENTRE ACTG EN 6 GRUPOS SEPARADOS POR COMA </h2>
+            <h4>COMPROBADOR INGRESE 6 LETRAS ENTRE A-C-T-G EN 6 GRUPOS SEPARADOS POR COMA </h4>
             <form>
                 <input type="text" placeholder="DNA" />
                 <button>ENVIAR</button>
@@ -19,16 +19,21 @@
         <div class="peticiones">
             <h2>GRABAR </h2>
             <form>
-                <input type="text" placeholder="Titulo" />
-                <input type="text" placeholder="Autor" />
+                <input type="text" placeholder="ADN" />
+                <input type="text" placeholder="CONDICION" />
                 <button>Post</button>
             </form>
 
         </div>
-        
+        <div class="peticiones">
+            <h2>Peticion Get (todos)</h2>
+            <button (click)="getPeticion()">Get</button>
+        </div>
     </div>
     <div class="mitad result">
-
+        <h3>Resultado</h3>
+        <div *ngFor="let resp of resultado ">
+            <p>mutante:{{ resp.mutante }}</p>
+            
     </div>
 
-</section>
